# fwe

./: .gitignore  LICENSE  README.md  pyproject.toml
fwe/: beltrami.py  free_water_elimination.py
tests/: generate_dataset.py  multitensor.py  test_fwe.py
